src/k8s/deployment-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysite-app
  labels:
    name: mysite-app
