src/k8s/deployment-manifests/mysite-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite-app-service-deployment
  namespace: mysite-app
  labels:
    application: mysite-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysite-app
      namespace: mysite-app
  template:
    metadata:
      labels:
        app: mysite-app
        namespace: mysite-app
    spec:
      containers:
        - name: rmysite-app
          image: hossamgbm/mysite-app:23
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
            limits:
              memory: 250Mi
              cpu: 300m
